// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseCommonConfig > dev.xxx 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/aaaa",
    },
    "hmr": false,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "compress": false,
    "headers": {
      "X-Custom-Foo": "bar",
    },
    "historyApiFallback": true,
    "host": "xxx.xxx",
    "htmlFallback": false,
    "https": {
      "cert": "xxx",
      "key": "xxxx",
    },
    "port": 8081,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > dev.xxx 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "favicon": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "favicon": [
      "/https/www.foo.com/default.ico",
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 3`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "inject": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 4`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "inject": [
      "body",
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "meta": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "meta": [
      {
        "charset": {
          "charset": "UTF-8",
        },
      },
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "template": [Function],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "template": [
      "static/index.html",
      [Function],
    ],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "templateParameters": [Function],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "templateParameters": [
      {
        "name": "jack",
      },
      [Function],
    ],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": [
      "",
      [Function],
    ],
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": [
      "Default",
      [Function],
    ],
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > output.cssModuleLocalIdentName 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "cssModules": {
      "localIdentName": "[local]-[hash:base64:6]",
    },
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > output.disableCssModuleExtension 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "cssModules": {
      "auto": [Function],
    },
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > output.enableInlineScripts 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "inlineScripts": true,
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;

exports[`parseCommonConfig > output.enableInlineStyles 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
      "server": "bundles",
    },
    "inlineStyles": true,
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
  },
}
`;
